--- a/src/assets/chirno/config0.json
+++ b/src/assets/chirno/config0.json
@@ -60,7 +60,7 @@
             "speedY": 0,
             "offsetX": -50,
             "cost": 3,
-            "canControl": true,
+            "allowedKeys": [2, 0, 0, 0, 0, 0, 0, 0],
             "cardName": 213,
             "cd": 300,
             "nb": 1,
@@ -72,7 +72,7 @@
             "gravityY": 0,
             "offsetX": -50,
             "cost": 3,
-            "canControl": true,
+            "allowedKeys": [2, 0, 0, 0, 0, 0, 0, 0],
             "cardName": 213,
             "cd": 300,
             "nb": 1,
