--- a/src/assets/remilia/config1.json
+++ b/src/assets/remilia/config1.json
@@ -26,12 +26,14 @@
             "cd": 210,
             "nb": 1,
             "action": 525,
+            "startKeys": [0, 0, 0, 1, 0, 0, 0, 0],
             "offsetX": -50
         },
         "air": {
             "cd": 210,
             "nb": 1,
             "action": 527,
+            "startKeys": [0, 0, 0, 1, 0, 0, 0, 0],
             "speedY": 0,
             "gravityY": 0,
             "offsetX": -50
