--- a/src/assets/chirno/config1.json
+++ b/src/assets/chirno/config1.json
@@ -46,14 +46,16 @@
         "ground": {
             "cd": 210,
             "nb": 1,
-            "action": 500,
+            "action": 521,
+            "startKeys": [0, 0, 0, 0, 1, 0, 0, 0],
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
             "cd": 210,
             "nb": 1,
-            "action": 500,
+            "action": 521,
+            "startKeys": [0, 0, 0, 0, 1, 0, 0, 0],
             "offsetX": -50,
             "posY": 0,
             "speedX": 0,
