--- a/src/assets/tenshi/config2.json
+++ b/src/assets/tenshi/config2.json
@@ -6,12 +6,14 @@
         "ground": {
             "cd": 300,
             "nb": 1,
-            "action": 566
+            "action": 566,
+            "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0]
         },
         "air": {
             "cd": 300,
             "nb": 1,
             "action": 566,
+            "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0],
             "posY": 0
         }
     },
