--- a/src/assets/satori/config0.json
+++ b/src/assets/satori/config0.json
@@ -1,54 +1,47 @@
 {
-    "spells": [214],
+    "spells": [204],
     "shownCost": 5,
 
     "8a": {
         "ground": {
-            "cd": 180,
+            "cd": 270,
             "nb": 1,
-            "action": 560,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 500,
             "offsetX": -50
         },
         "air": {
-            "cd": 180,
+            "cd": 270,
             "nb": 1,
-            "action": 562,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 500,
             "offsetX": -50,
-            "speedY": 0,
-            "gravityY": 0
+            "posY": 0
         }
     },
     "8b": {
         "ground": {
-            "cd": 210,
+            "cd": 600,
             "nb": 1,
-            "action": 525,
+            "action": 551,
             "offsetX": -50
         },
         "air": {
-            "cd": 210,
+            "cd": 600,
             "nb": 1,
-            "action": 525,
+            "action": 551,
             "offsetX": -50,
             "posY": 0
         }
     },
     "8c": {
         "ground": {
-            "cd": 240,
+            "cd": 300,
             "nb": 1,
-            "action": 550,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
-            "offsetX": -50
+            "action": 520
         },
         "air": {
-            "cd": 240,
+            "cd": 300,
             "nb": 1,
-            "action": 550,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
-            "offsetX": -50,
+            "action": 520,
             "posY": 0
         }
     },
@@ -59,10 +52,10 @@
             "speedY": 0,
             "offsetX": -50,
             "cost": 5,
-            "cardName": 214,
+            "cardName": 204,
             "cd": 300,
             "nb": 1,
-            "action": 614
+            "action": 604
         },
         "air": {
             "speedX": 0,
@@ -71,10 +64,10 @@
             "gravityY": 0,
             "offsetX": -50,
             "cost": 5,
-            "cardName": 214,
+            "cardName": 204,
             "cd": 300,
             "nb": 1,
-            "action": 614
+            "action": 604
         }
     }
 }
