--- a/src/assets/yuuka/config0.json
+++ b/src/assets/yuuka/config0.json
@@ -1,20 +1,18 @@
 {
-    "spells": [214],
+    "spells": [207],
     "shownCost": 5,
 
     "8a": {
         "ground": {
-            "cd": 180,
+            "cd": 240,
             "nb": 1,
-            "action": 560,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 540,
             "offsetX": -50
         },
         "air": {
-            "cd": 180,
+            "cd": 240,
             "nb": 1,
-            "action": 562,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 542,
             "offsetX": -50,
             "speedY": 0,
             "gravityY": 0
@@ -24,32 +22,32 @@
         "ground": {
             "cd": 210,
             "nb": 1,
-            "action": 525,
+            "action": 520,
             "offsetX": -50
         },
         "air": {
             "cd": 210,
             "nb": 1,
-            "action": 525,
+            "action": 522,
             "offsetX": -50,
-            "posY": 0
+            "speedY": 0,
+            "gravityY": 0
         }
     },
     "8c": {
         "ground": {
-            "cd": 240,
+            "cd": 300,
             "nb": 1,
-            "action": 550,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 505,
             "offsetX": -50
         },
         "air": {
-            "cd": 240,
+            "cd": 300,
             "nb": 1,
-            "action": 550,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 505,
             "offsetX": -50,
-            "posY": 0
+            "speedY": 0,
+            "gravityY": 0
         }
     },
 
@@ -59,22 +57,22 @@
             "speedY": 0,
             "offsetX": -50,
             "cost": 5,
-            "cardName": 214,
+            "cardName": 207,
             "cd": 300,
             "nb": 1,
-            "action": 614
+            "action": 607
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
             "offsetX": -50,
             "cost": 5,
-            "cardName": 214,
+            "cardName": 207,
+            "posY": 0,
             "cd": 300,
             "nb": 1,
-            "action": 614
+            "action": 607
         }
     }
 }
