--- a/src/assets/clownpiece/config2.json
+++ b/src/assets/clownpiece/config2.json
@@ -1,55 +1,52 @@
 {
-    "spells": [214],
-    "shownCost": 5,
+    "spells": [204],
+    "shownCost": 4,
 
     "8a": {
         "ground": {
-            "cd": 180,
+            "cd": 300,
             "nb": 1,
-            "action": 560,
+            "action": 510,
             "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
-            "offsetX": -50
+            "offsetX": 0
         },
         "air": {
-            "cd": 180,
+            "cd": 300,
             "nb": 1,
-            "action": 562,
+            "action": 510,
             "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
-            "offsetX": -50,
-            "speedY": 0,
-            "gravityY": 0
+            "offsetX": 0,
+            "posY": 0
         }
     },
     "8b": {
         "ground": {
-            "cd": 210,
+            "cd": 240,
             "nb": 1,
-            "action": 525,
-            "offsetX": -50
+            "action": 520
         },
         "air": {
-            "cd": 210,
+            "cd": 240,
             "nb": 1,
-            "action": 525,
-            "offsetX": -50,
+            "action": 520,
             "posY": 0
         }
     },
     "8c": {
         "ground": {
-            "cd": 240,
+            "cd": 270,
             "nb": 1,
-            "action": 550,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 540,
             "offsetX": -50
         },
         "air": {
-            "cd": 240,
+            "cd": 270,
             "nb": 1,
-            "action": 550,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 540,
             "offsetX": -50,
-            "posY": 0
+            "posY": 0,
+            "speedY": 0,
+            "gravityY": 0
         }
     },
 
@@ -57,24 +54,24 @@
         "ground": {
             "speedX": 0,
             "speedY": 0,
-            "offsetX": -50,
-            "cost": 5,
-            "cardName": 214,
+            "offsetX": 0,
+            "cost": 4,
+            "cardName": 204,
             "cd": 300,
             "nb": 1,
-            "action": 614
+            "action": 604
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
             "posY": 0,
             "gravityY": 0,
-            "offsetX": -50,
-            "cost": 5,
-            "cardName": 214,
+            "offsetX": 0,
+            "cost": 4,
+            "cardName": 204,
             "cd": 300,
             "nb": 1,
-            "action": 614
+            "action": 604
         }
     }
 }
