--- a/src/assets/kaguya/config1.json
+++ b/src/assets/kaguya/config1.json
@@ -1,21 +1,23 @@
 {
-    "spells": [201],
-    "shownCost": 5,
+    "spells": [200],
+    "shownCost": 3,
 
     "8a": {
         "ground": {
-            "cd": 225,
+            "cd": 300,
             "nb": 1,
-            "action": 510,
-            "offsetX": -150,
+            "action": 505,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "offsetX": -100,
             "cond": "end"
         },
         "air": {
-            "cd": 225,
+            "cd": 300,
             "nb": 1,
-            "action": 510,
+            "action": 505,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
             "posY": 0,
-            "offsetX": -150,
+            "offsetX": -100,
             "cond": "end"
         }
     },
@@ -23,36 +25,34 @@
         "ground": {
             "cd": 300,
             "nb": 1,
-            "action": 550,
-            "offsetX": -50,
+            "action": 531,
+            "offsetX": 0,
             "cond": "end"
         },
         "air": {
             "cd": 300,
             "nb": 1,
-            "action": 552,
-            "gravityY": 0,
+            "action": 533,
             "speedY": 0,
-            "offsetX": -50,
+            "gravityY": 0,
+            "offsetX": 0,
             "cond": "end"
         }
     },
     "8c": {
         "ground": {
-            "cd": 150,
+            "cd": 300,
             "nb": 1,
-            "action": 570,
-            "end": 571,
-            "offsetX": -200,
+            "action": 545,
+            "offsetX": 0,
             "cond": "end"
         },
         "air": {
-            "cd": 150,
+            "cd": 300,
             "nb": 1,
-            "action": 570,
-            "end": 571,
+            "action": 545,
             "posY": 0,
-            "offsetX": -200,
+            "offsetX": 0,
             "cond": "end"
         }
     },
@@ -61,24 +61,24 @@
         "ground": {
             "speedX": 0,
             "speedY": 0,
-            "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "offsetX": -50,
+            "cost": 3,
+            "cardName": 200,
             "cd": 300,
             "nb": 1,
-            "action": 601
+            "action": 600
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
-            "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "offsetX": -50,
+            "posY": 0,
+            "cost": 3,
+            "cardName": 200,
             "cd": 300,
             "nb": 1,
-            "action": 601
+            "action": 600
         }
     }
 }
