--- a/src/assets/mima/config0.json
+++ b/src/assets/mima/config0.json
@@ -1,59 +1,59 @@
 {
-    "spells": [201],
-    "shownCost": 5,
+    "spells": [209],
+    "shownCost": 3,
 
     "8a": {
         "ground": {
-            "cd": 225,
+            "cd": 210,
             "nb": 1,
-            "action": 510,
-            "offsetX": -150,
+            "action": 525,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 225,
+            "cd": 210,
             "nb": 1,
-            "action": 510,
+            "action": 525,
             "posY": 0,
-            "offsetX": -150,
+            "gravityY": 0,
+            "offsetX": -50,
             "cond": "end"
         }
     },
     "8b": {
         "ground": {
-            "cd": 300,
+            "cd": 450,
             "nb": 1,
-            "action": 550,
+            "action": 570,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 300,
+            "cd": 450,
             "nb": 1,
-            "action": 552,
-            "gravityY": 0,
-            "speedY": 0,
+            "action": 570,
+            "posY": 0,
             "offsetX": -50,
             "cond": "end"
         }
     },
     "8c": {
         "ground": {
-            "cd": 150,
+            "cd": 60,
             "nb": 1,
-            "action": 570,
-            "end": 571,
-            "offsetX": -200,
-            "cond": "end"
+            "action": 550,
+            "offsetX": 0,
+            "cond": "end",
+            "recovery": 300
         },
         "air": {
-            "cd": 150,
+            "cd": 60,
             "nb": 1,
-            "action": 570,
-            "end": 571,
+            "action": 550,
             "posY": 0,
-            "offsetX": -200,
-            "cond": "end"
+            "offsetX": 0,
+            "cond": "end",
+            "recovery": 300
         }
     },
 
@@ -61,24 +61,24 @@
         "ground": {
             "speedX": 0,
             "speedY": 0,
-            "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "offsetX": -50,
+            "cost": 3,
+            "cardName": 209,
             "cd": 300,
             "nb": 1,
-            "action": 601
+            "action": 609
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
-            "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "offsetX": -50,
+            "posY": 0,
+            "cost": 3,
+            "cardName": 209,
             "cd": 300,
             "nb": 1,
-            "action": 601
+            "action": 609
         }
     }
 }
