--- a/src/assets/mokou/config0.json
+++ b/src/assets/mokou/config0.json
@@ -1,58 +1,61 @@
 {
-    "spells": [201],
-    "shownCost": 5,
+    "spells": [212],
+    "shownCost": 3,
 
     "8a": {
         "ground": {
             "cd": 225,
             "nb": 1,
-            "action": 510,
-            "offsetX": -150,
+            "action": 540,
+            "canControl": true,
+            "gravityY": 0,
+            "speedY": 0,
+            "offsetX": 100,
+            "posY": 200,
             "cond": "end"
         },
         "air": {
             "cd": 225,
             "nb": 1,
-            "action": 510,
-            "posY": 0,
-            "offsetX": -150,
+            "action": 540,
+            "canControl": true,
+            "gravityY": 0,
+            "speedY": 0,
+            "offsetX": 0,
             "cond": "end"
         }
     },
     "8b": {
         "ground": {
-            "cd": 300,
+            "cd": 210,
             "nb": 1,
-            "action": 550,
+            "action": 560,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 300,
+            "cd": 210,
             "nb": 1,
-            "action": 552,
-            "gravityY": 0,
-            "speedY": 0,
+            "action": 560,
+            "posY": 0,
             "offsetX": -50,
             "cond": "end"
         }
     },
     "8c": {
         "ground": {
-            "cd": 150,
+            "cd": 300,
             "nb": 1,
-            "action": 570,
-            "end": 571,
-            "offsetX": -200,
+            "action": 520,
+            "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 150,
+            "cd": 300,
             "nb": 1,
-            "action": 570,
-            "end": 571,
+            "action": 520,
             "posY": 0,
-            "offsetX": -200,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -62,23 +65,22 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "cost": 3,
+            "cardName": 212,
             "cd": 300,
             "nb": 1,
-            "action": 601
+            "action": 612
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
             "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "cost": 3,
+            "cardName": 212,
             "cd": 300,
             "nb": 1,
-            "action": 601
+            "action": 612
         }
     }
 }
