--- a/src/assets/mokou/config2.json
+++ b/src/assets/mokou/config2.json
@@ -1,58 +1,63 @@
 {
-    "spells": [201],
-    "shownCost": 5,
+    "spells": [211],
+    "shownCost": 2,
 
     "8a": {
         "ground": {
-            "cd": 225,
+            "cd": 240,
             "nb": 1,
-            "action": 510,
-            "offsetX": -150,
-            "cond": "end"
-        },
-        "air": {
-            "cd": 225,
-            "nb": 1,
-            "action": 510,
-            "posY": 0,
-            "offsetX": -150,
-            "cond": "end"
-        }
-    },
-    "8b": {
-        "ground": {
-            "cd": 300,
-            "nb": 1,
-            "action": 550,
+            "action": 501,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 300,
+            "cd": 240,
             "nb": 1,
-            "action": 552,
+            "action": 503,
             "gravityY": 0,
             "speedY": 0,
             "offsetX": -50,
             "cond": "end"
         }
     },
-    "8c": {
+    "8b": {
         "ground": {
-            "cd": 150,
+            "cd": 210,
             "nb": 1,
-            "action": 570,
-            "end": 571,
-            "offsetX": -200,
+            "action": 565,
+            "gravityY": 0,
+            "speedY": 0,
+            "offsetX": 0,
             "cond": "end"
         },
         "air": {
-            "cd": 150,
+            "cd": 210,
             "nb": 1,
-            "action": 570,
-            "end": 571,
+            "action": 567,
+            "gravityY": 0,
+            "speedY": 0,
+            "offsetX": 0,
+            "cond": "end"
+        }
+    },
+    "8c": {
+        "ground": {
+            "cd": 300,
+            "nb": 1,
+            "action": 531,
+            "offsetX": -50,
+            "gravityY": 0,
+            "speedY": 0,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 300,
+            "nb": 1,
+            "action": 531,
+            "gravityY": 0,
+            "speedY": 0,
             "posY": 0,
-            "offsetX": -200,
+            "offsetX": -50,
             "cond": "end"
         }
     },
@@ -62,23 +67,22 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "cost": 2,
+            "cardName": 211,
             "cd": 300,
             "nb": 1,
-            "action": 601
+            "action": 611
         },
         "air": {
             "speedX": 0,
             "speedY": 0,
-            "posY": 0,
             "gravityY": 0,
             "offsetX": 0,
-            "cost": 5,
-            "cardName": 201,
+            "cost": 2,
+            "cardName": 211,
             "cd": 300,
             "nb": 1,
-            "action": 601
+            "action": 661
         }
     }
 }
