--- a/src/assets/satori/config2.json
+++ b/src/assets/satori/config2.json
@@ -1,34 +1,31 @@
 {
-    "spells": [214],
+    "spells": [200],
     "shownCost": 5,
 
     "8a": {
         "ground": {
-            "cd": 180,
+            "cd": 300,
             "nb": 1,
-            "action": 560,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 540,
             "offsetX": -50
         },
         "air": {
-            "cd": 180,
+            "cd": 300,
             "nb": 1,
-            "action": 562,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 540,
             "offsetX": -50,
-            "speedY": 0,
-            "gravityY": 0
+            "posY": 0
         }
     },
     "8b": {
         "ground": {
-            "cd": 210,
+            "cd": 300,
             "nb": 1,
             "action": 525,
             "offsetX": -50
         },
         "air": {
-            "cd": 210,
+            "cd": 300,
             "nb": 1,
             "action": 525,
             "offsetX": -50,
@@ -37,17 +34,15 @@
     },
     "8c": {
         "ground": {
-            "cd": 240,
+            "cd": 300,
             "nb": 1,
-            "action": 550,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 510,
             "offsetX": -50
         },
         "air": {
-            "cd": 240,
+            "cd": 300,
             "nb": 1,
-            "action": 550,
-            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "action": 510,
             "offsetX": -50,
             "posY": 0
         }
@@ -59,10 +54,10 @@
             "speedY": 0,
             "offsetX": -50,
             "cost": 5,
-            "cardName": 214,
+            "cardName": 200,
             "cd": 300,
             "nb": 1,
-            "action": 614
+            "action": 600
         },
         "air": {
             "speedX": 0,
@@ -71,10 +66,10 @@
             "gravityY": 0,
             "offsetX": -50,
             "cost": 5,
-            "cardName": 214,
+            "cardName": 200,
             "cd": 300,
             "nb": 1,
-            "action": 614
+            "action": 600
         }
     }
 }
